fixed some elements hanging off screen

--- a/style.css
+++ b/style.css
@@ -649,7 +649,7 @@ label.switch {
     }
 
     .bell {
-        margin-left: 1000px;
+        margin-left: auto;
     }
 
     .profile {
